; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/devfs/extr_rule.c_ruleset_main.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/devfs/extr_rule.c_ruleset_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"devfs ruleset\00", align 1
@mpfd = common dso_local global i32 0, align 4
@DEVFSIO_SUSE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [19 x i8] c"ioctl DEVFSIO_SUSE\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ruleset_main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  %7 = call i32 @setprogname(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %8 = load i32, i32* %3, align 4
  %9 = icmp slt i32 %8, 2
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = call i32 (...) @usage()
  br label %12

12:                                               ; preds = %10, %2
  %13 = load i8**, i8*** %4, align 8
  %14 = getelementptr inbounds i8*, i8** %13, i64 1
  %15 = load i8*, i8** %14, align 8
  %16 = call i32 @eatonum(i8* %15)
  store i32 %16, i32* %5, align 4
  %17 = load i32, i32* @mpfd, align 4
  %18 = load i32, i32* @DEVFSIO_SUSE, align 4
  %19 = call i32 @ioctl(i32 %17, i32 %18, i32* %5)
  store i32 %19, i32* %6, align 4
  %20 = load i32, i32* %6, align 4
  %21 = icmp eq i32 %20, -1
  br i1 %21, label %22, label %24

22:                                               ; preds = %12
  %23 = call i32 @err(i32 1, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0))
  br label %24

24:                                               ; preds = %22, %12
  ret i32 0
}

declare dso_local i32 @setprogname(i8*) #1

declare dso_local i32 @usage(...) #1

declare dso_local i32 @eatonum(i8*) #1

declare dso_local i32 @ioctl(i32, i32, i32*) #1

declare dso_local i32 @err(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
